crates/turborepo-integration-tests/tests/snapshots/run_single_package__single_package_no_config_dry_run.snap
---
source: crates/turborepo-integration-tests/tests/run_single_package.rs
expression: redact_output(&result.combined_output())
---
Global Hash Inputs
  Global Files                          = 1
  External Dependencies Hash            = 
  Global Cache Key                      = I can’t see ya, but I know you’re here
  Global Env Vars                       = 
  Global Env Vars Values                = 
  Inferred Global Env Vars Values       = 
  Global Passed Through Env Vars        = 
  Global Passed Through Env Vars Values = 
  Engines Values                        = 

Tasks to Run
build
  Task                           = build
  Hash                           = [HASH]
  Cached (Local)                 = false
  Cached (Remote)                = false
  Command                        = echo building > foo.txt
  Outputs                        = 
  Log File                       = 
  Dependencies                   = 
  Dependents                     = 
  With                           = 
  Inputs Files Considered        = 4
  Env Vars                       = 
  Env Vars Values                = 
  Inferred Env Vars Values       = 
  Passed Through Env Vars        = 
  Passed Through Env Vars Values = 
  Resolved Task Definition       = {"outputs":[],"cache":false,"dependsOn":[],"inputs":[],"outputLogs":"full","persistent":false,"interruptible":false,"env":[],"passThroughEnv":null,"interactive":false}
  Framework                      =
