crates/turborepo-integration-tests/tests/snapshots/run_single_package__single_package_run_cache_hit.snap
---
source: crates/turborepo-integration-tests/tests/run_single_package.rs
expression: redact_output(&result.combined_output())
---
• Running build
• Remote caching disabled
build: cache hit, replaying logs [HASH]
build: 
build: > build
build: > echo building > foo.txt
build: 

 Tasks:    1 successful, 1 total
Cached:    1 cached, 1 total
  Time: [TIME] >>> FULL TURBO
