crates/turborepo-integration-tests/tests/snapshots/run_single_package__single_package_with_deps_dry_run.snap
---
source: crates/turborepo-integration-tests/tests/run_single_package.rs
expression: redact_output(&result.combined_output())
---
Global Hash Inputs
  Global Files                          = 2
  External Dependencies Hash            = 
  Global Cache Key                      = I can’t see ya, but I know you’re here
  Global Env Vars                       = 
  Global Env Vars Values                = 
  Inferred Global Env Vars Values       = 
  Global Passed Through Env Vars        = 
  Global Passed Through Env Vars Values = 
  Engines Values                        = 

Tasks to Run
build
  Task                           = build
  Hash                           = [HASH]
  Cached (Local)                 = false
  Cached (Remote)                = false
  Command                        = echo building > foo.txt
  Outputs                        = foo.txt
  Log File                       = .turbo/turbo-build.log
  Dependencies                   = 
  Dependents                     = test
  With                           = 
  Inputs Files Considered        = 5
  Env Vars                       = 
  Env Vars Values                = 
  Inferred Env Vars Values       = 
  Passed Through Env Vars        = 
  Passed Through Env Vars Values = 
  Resolved Task Definition       = {"outputs":["foo.txt"],"cache":true,"dependsOn":[],"inputs":[],"outputLogs":"full","persistent":false,"interruptible":false,"env":[],"passThroughEnv":null,"interactive":false}
  Framework                      = 
test
  Task                           = test
  Hash                           = [HASH]
  Cached (Local)                 = false
  Cached (Remote)                = false
  Command                        = cat foo.txt
  Outputs                        = 
  Log File                       = .turbo/turbo-test.log
  Dependencies                   = build
  Dependents                     = 
  With                           = 
  Inputs Files Considered        = 5
  Env Vars                       = 
  Env Vars Values                = 
  Inferred Env Vars Values       = 
  Passed Through Env Vars        = 
  Passed Through Env Vars Values = 
  Resolved Task Definition       = {"outputs":[],"cache":true,"dependsOn":["build"],"inputs":[],"outputLogs":"full","persistent":false,"interruptible":false,"env":[],"passThroughEnv":null,"interactive":false}
  Framework                      =
