crates/turborepo-integration-tests/tests/snapshots/run_single_package__single_package_with_deps_output_logs_errors_only.snap
---
source: crates/turborepo-integration-tests/tests/run_single_package.rs
expression: redact_output(&result.combined_output())
---
• Running test
• Remote caching disabled

 Tasks:    2 successful, 2 total
Cached:    2 cached, 2 total
  Time: [TIME] >>> FULL TURBO
