crates/turborepo-integration-tests/tests/snapshots/run_single_package__single_package_with_deps_run_cache_miss.snap
---
source: crates/turborepo-integration-tests/tests/run_single_package.rs
expression: redact_output(&result.combined_output())
---
• Running test
• Remote caching disabled
build: cache miss, executing [HASH]
build: 
build: > build
build: > echo building > foo.txt
build: 
test: cache miss, executing [HASH]
test: 
test: > test
test: > cat foo.txt
test: 
test: building

 Tasks:    2 successful, 2 total
Cached:    0 cached, 2 total
  Time: [TIME]
